<resources>

    <string name="app_name" translatable="false">S2TDroid</string>
    <string name="author_name" translatable="false">npes87184</string>
    <string name="version_name" translatable="false">1.6.8</string>

    <string name="output_folder">Output Folder</string>
    <string name="input_file">Input File</string>
    <string name="cancel">Cancel</string>
    <string name="encoding_title">Input encode</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="transformBubble">Transform Bubble</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="wait">Transforming...</string>
    <string name="output_encoding_title">Output encode</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="subject">S2TDroid</string>
    <string name="mail_body">My problem is:\nMy phone is: \nMy android version is:\nOther:</string>
    <string name="bookname">filename</string>
    <string name="contact">Contact Me</string>
    <string name="rate">Rate</string>
    <string name="dialogHint">You can change mode in setting.</string>
    <string name="copy">Copy</string>
    <string name="startBubble">Start Bubble</string>
    <string name="bubbleDetail">Transform bubble is a very special function.\n It can transform anywhere.</string>

    <string name="floatingPermission">We need floating window permission to use bubble.</string>
    <string name="filePermission">We need the permission of file access to work perfectly.</string>

    <string name="filename_detail">Output file name will be the same as input file.</string>
    <string name="filename">Output File Name</string>

    <string name="auto_delete_detail">Auto delete source file(s) after transforming.</string>
    <string name="auto_delete">Auto delete</string>

    <string name="notification">S2TDroid transform bubble is acting.</string>

    <string name="oops">Oops...</string>
    <string name="oops_detail">Input file doesn\'t exist.</string>

    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>

    <string name="word_count">Word Count:</string>

    <string name="s2t">Simple to Traditional</string>
    <string name="t2s">Traditional to Simple</string>

    <string name="small">Small</string>
    <string name="large">Large</string>

    <string name="mode">Mode</string>
    <string name="bubble_mode">Bubble Mode</string>
    <string name="bubble_size">Bubble Size</string>
    <string name="encode">Encode</string>
    <string name="normal">Normal</string>
    <string name="donate" translatable="false">Pro</string>
    <string name="illegal_filename">Illegal filename</string>

    <string name="version_tag">Version:\u0020</string>
    <string name="author_tag">Author:\u0020</string>
    <string name="web_tag">Visit my website</string>

    <string name="rate_title">Rate S2TDroid</string>
    <string name="rate_msg">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_ok">Rate now</string>
    <string name="rate_cancel">Later</string>
    <string name="rate_no">No, thanks</string>

    <string name="pro_batch">Batch mode</string>
    <string name="pro_batch_desc">Transform more than one file once.</string>
    <string name="pro_external">Directly write file to external SD card</string>
    <string name="pro_external_desc">If your android version is newer than Lollipop, you can write output file to external SD card directly.</string>
    <string name="pro_progress">Progress</string>
    <string name="pro_progress_desc">In pro, we will show accurate and reliable transformed progress.</string>
    <string name="pro_no_pro">No promotion</string>
    <string name="pro_no_pro_desc">In pro, you will never see promotion ever.</string>
    <string name="pro_and_more">And more</string>
    <string name="pro_and_more_desc">There are many new features in pro. Include more advanced file name control, source file auto deletion and more lightweight file chooser. Click on the Play Store in the bottom right corner now to see it!</string>

</resources>
