<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/normal"
        android:key="normal">
        <ListPreference android:entries="@array/mode_entry"
            android:entryValues="@array/mode_value"
            android:dialogTitle="@string/mode"
            android:negativeButtonText="@string/cancel"
            android:key="mode"
            android:icon="@drawable/ic_menu_attachment"
            android:title="@string/mode"/>

        <ListPreference android:entries="@array/mode_entry"
            android:entryValues="@array/mode_value"
            android:dialogTitle="@string/bubble_mode"
            android:negativeButtonText="@string/cancel"
            android:key="bubble_mode"
            android:icon="@drawable/ic_menu_copy_holo_light"
            android:title="@string/bubble_mode"/>

        <ListPreference android:entries="@array/file_name_option_entry"
            android:entryValues="@array/file_name_option_value"
            android:dialogTitle="@string/filename"
            android:negativeButtonText="@string/cancel"
            android:key="filename"
            android:icon="@drawable/ic_menu_save"
            android:title="@string/filename"/>

        <CheckBoxPreference android:key="delete_source"
            android:icon="@drawable/ic_delete_forever_black_48dp"
            android:summary="@string/auto_delete_detail"
            android:title="@string/auto_delete" android:defaultValue="false"/>

        <ListPreference android:entries="@array/file_order_entry"
            android:entryValues="@array/file_order_value"
            android:dialogTitle="@string/file_sort"
            android:negativeButtonText="@string/cancel"
            android:key="file_sort"
            android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/file_sort"/>
    </PreferenceCategory>

    <PreferenceCategory
    android:title="@string/encode"
    android:key="encodingCategory">
        <ListPreference android:entries="@array/encoding_entry" android:entryValues="@array/encoding_value" android:negativeButtonText="@string/cancel" android:dialogTitle="@string/encoding_title" android:title="@string/encoding_title" android:key="encoding" android:icon="@drawable/ic_menu_find_holo_light"/>
        <ListPreference android:entries="@array/output_encoding_entry" android:entryValues="@array/output_encoding_value" android:dialogTitle="@string/output_encoding_title" android:negativeButtonText="@string/cancel" android:key="output_encoding" android:icon="@drawable/ic_perm_group_user_dictionary_write" android:title="@string/output_encoding_title"/>
    </PreferenceCategory>

</PreferenceScreen>